force-app/main/default/objects/Escalation__c/Escalation__c.object-meta.xml
<CustomObject>
    <label>Escalation</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Escalation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Escalations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>