force-app/main/default/objects/Escalation__c/fields/Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Escalations (Account Manager)</relationshipLabel>
    <relationshipName>Escalations1</relationshipName>
    <type>Lookup</type>
</CustomField>