force-app/main/default/objects/Escalation__c/fields/Additional_Action_Needed__c.field-meta.xml
<CustomField>
    <fullName>Additional_Action_Needed__c</fullName>
    <label>Additional Action Needed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>