force-app/main/default/objects/Escalation__c/fields/At_Fault__c.field-meta.xml
<CustomField>
    <fullName>At_Fault__c</fullName>
    <label>At Fault</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Quicken Loans</fullName>
            </value>
            <value>
                <fullName>Third Party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>