force-app/main/default/objects/Escalation__c/fields/Escalation_Origination__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Origination__c</fullName>
    <label>Escalation Origination</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Partner Escalation</fullName>
            </value>
            <value>
                <fullName>PSS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>