force-app/main/default/objects/Escalation__c/fields/Has_Client_Relations_contacted_EE__c.field-meta.xml
<CustomField>
    <fullName>Has_Client_Relations_contacted_EE__c</fullName>
    <label>Has Client Relations contacted EE?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>