force-app/main/default/objects/Escalation__c/fields/Partner_Contacted__c.field-meta.xml
<CustomField>
    <fullName>Partner_Contacted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partner Contacted</label>
    <type>Checkbox</type>
</CustomField>