force-app/main/default/objects/Escalation__c/fields/Partner_Contacted_Date__c.field-meta.xml
<CustomField>
    <fullName>Partner_Contacted_Date__c</fullName>
    <label>Partner Contacted Date</label>
    <type>Date</type>
</CustomField>