force-app/main/default/objects/Escalation__c/fields/PSM__c.field-meta.xml
<CustomField>
    <fullName>PSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PSM</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Escalations</relationshipLabel>
    <relationshipName>Escalations</relationshipName>
    <type>Lookup</type>
</CustomField>